# album_splitter

./: .gitignore  README.md  pyproject.toml
cue_finder/: __init__.py  cli.py
cue_finder/backends/: __init__.py  ape_splitter.py  flac_splitter.py  wav_splitter.py
cue_finder/core/: __init__.py  cleanup.py  cue.py  interactive.py  match.py  rank.py  search.py  silence.py  slicer.py  split.py  tag.py  tracklist.py
cue_finder/tui/: __init__.py  app.py
docs/: metadata-search.md  search-refinement-design.md  troubleshooting.md
openspec/changes/archive/2026-06-19-cue-finder-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-cue-finder-cli/specs/audio-splitting/: spec.md
openspec/changes/archive/2026-06-19-cue-finder-cli/specs/beets-tagging/: spec.md
openspec/changes/archive/2026-06-19-cue-finder-cli/specs/cli-interface/: spec.md
openspec/changes/archive/2026-06-19-cue-finder-cli/specs/cue-generation/: spec.md
openspec/changes/archive/2026-06-19-cue-finder-cli/specs/metadata-search/: spec.md
openspec/changes/archive/2026-06-19-cue-finder-cli/specs/silence-detection/: spec.md
openspec/changes/archive/2026-06-19-cue-finder-cli/specs/track-matching/: spec.md
openspec/changes/archive/2026-06-19-cue-finder-cli/specs/tracklist-format/: spec.md
openspec/specs/audio-splitting/: spec.md
openspec/specs/beets-tagging/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/cue-generation/: spec.md
openspec/specs/metadata-search/: spec.md
openspec/specs/silence-detection/: spec.md
openspec/specs/track-matching/: spec.md
openspec/specs/tracklist-format/: spec.md
skills/cue-finder/: SKILL.md
tests/: conftest.py  test_acoustid.py  test_cleanup.py  test_cue.py  test_integration.py  test_interactive.py  test_match.py  test_progressive_search.py  test_rank.py  test_silence.py  test_tracklist.py  test_tui.py
