[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cue-finder"
version = "0.1.0"
description = "End-to-end CLI tool for splitting single-file CD rips into individual tracks with metadata tagging"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "cue-finder contributors"}
]
keywords = ["audio", "cue", "split", "metadata", "tagging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.26.7",
    "rich>=13.0.0",
    "textual>=8.0.0",
    "questionary>=2.0.0",
    "musicbrainzngs>=0.7.1",
    "python3-discogs-client>=2.7",
    "deezer-python>=7.0.0",
    "pyacoustid>=1.3.0",
    "pyyaml>=6.0",
    "mutagen>=1.47",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
netease = ["pyncm>=1.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-timeout>=2.0",
    "textual-dev>=1.0",
]

[project.scripts]
cue-finder = "cue_finder.cli:app"

[tool.setuptools.packages.find]
include = ["cue_finder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
